Use getLast where applicable